--- a/notebooks/wrapper-dev.ipynb
+++ b/notebooks/wrapper-dev.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8eb00c67",
+   "id": "0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b867792",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
     "\n",
     "from langchain_openai import ChatOpenAI\n",
     "from langchain_core.prompts import PromptTemplate\n",
-    "from langchain.messages import HumanMessage, AIMessage, SystemMessage\n",
+    "from langchain_core.messages import HumanMessage, AIMessage, SystemMessage\n",
     "\n",
     "from dotenv import load_dotenv\n",
     "\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08e214bb",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d53a581c",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c446c43",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56a269e9",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2ea8b0f",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": []
