start of day commit

--- a/notebooks/tool-agent-test.ipynb
+++ b/notebooks/tool-agent-test.ipynb
@@ -68,7 +68,6 @@
     "    Node 1: interrupt for input and store it in StateGraph['user_input'].\n",
     "    (In a real langgraph node this would be an interrupt node; here we use Python input().)\n",
     "    \"\"\"\n",
-    "    if \"complete\" not in state: state[\"complete\"] = False\n",
     "    prompt = interrupt(\"Enter prompt (or 'exit' to exit): \").strip()\n",
     "    if isinstance(prompt, dict):\n",
     "        state = prompt[\"state\"]\n",
@@ -120,38 +119,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json \n",
+    "from uuid import uuid4\n",
+    "from typing import Annotated, Literal, List, Dict, TypedDict\n",
+    "\n",
+    "from langchain.tools import ToolRuntime, tool\n",
+    "from langchain_core.messages import HumanMessage, AnyMessage, SystemMessage, ToolMessage, AIMessage\n",
+    "from langgraph.types import Command, interrupt, Send\n",
+    "from langgraph.graph import add_messages\n",
+    "\n",
+    "from langgraph.prebuilt import ToolNode\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json \n",
     "from uuid import uuid4\n",
     "from typing import Annotated\n",
-    "from langchain_core.tools import InjectedToolCallId\n",
+    "from langchain.tools import InjectedToolCallId\n",
     "# from langchain_core.tools import tool\n",
     "from langchain.tools import ToolRuntime, tool\n",
     "from langchain_core.messages import HumanMessage, AnyMessage, SystemMessage, ToolMessage\n",
-    "from langgraph.types import Command, interrupt\n",
+    "from langgraph.types import Command, interrupt, Send\n",
     "from langgraph.graph import add_messages\n",
     "from typing import Literal\n",
     "\n",
-    "@tool(\n",
-    "    \"chatting_agent_tool\",\n",
-    "    description=\"A tool for interacting with a specialized agent.\"\n",
-    ")\n",
-    "def agent_tkt_tool(runtime: ToolRuntime) -> str:\n",
-    "    result = {\"user_input\": \"\", \"ai_output\": \"\", \"complete\": False}\n",
-    "    _config = config\n",
-    "    while not result[\"complete\"]: \n",
-    "        interrupted = runtime.state[\"interrupted\"]\n",
-    "        if interrupted:\n",
-    "            resume = interrupt(\"Prompt: \")\n",
-    "            result = sa.invoke(Command(resume=resume), config=_config)\n",
-    "        else:\n",
-    "            result = sa.invoke(input=result, config=_config)\n",
-    "        interrupted = \"__interrupt__\" in result\n",
-    "        \n",
+    "from langgraph.prebuilt import ToolNode\n",
+    "\n",
+    "# We will assume there will be only one agent tool call\n",
+    "\n",
+    "@tool\n",
+    "def chatting_agent_tool(query:str, runtime: ToolRuntime):\n",
+    "    \"\"\"A tool for interacting with a specialized agent.\"\"\"\n",
+    "\n",
+    "    _state = runtime.state.get(\"chatting_agent_tool_state\", {})\n",
+    "    _complete = _state.get(\"complete\", False)\n",
+    "    result = {\"user_input\": \"query\", \"ai_output\": \"\", \"complete\": _complete}\n",
+    "\n",
+    "    _interrupted = _state.get(\"interrupted\", False)\n",
+    "    if _interrupted: \n",
+    "        result = Command(resume = _state.get(\"resume_content\", {}))\n",
+    "    \n",
+    "    result = sa.invoke(result, config=runtime.config)\n",
+    "    \n",
+    "    if \"__interrupt__\" in result.keys():\n",
+    "        return Command(\n",
+    "                goto=Send(\"interrupt_node\", arg={\"next_node\": \"tool_executor\", \"__interrupt__\": result[\"__interrupt__\"]})\n",
+    "                update={\n",
+    "                        \"\"\n",
+    "                    }\n",
+    "            )\n",
+    "    else:\n",
+    "        return Command(update={\n",
+    "                \"messages\": result[\"ai_output\"], \n",
+    "                \"chatting_agent_tool_state\": {\n",
+    "                        \"interrupted\": False, \n",
+    "                        \"interrupt_content\": {}, \n",
+    "                        \"resume_content\": {}\n",
+    "                    }\n",
+    "            }) \n",
+    "    \n",
+    "class InterruptNodeState(TypedDict):\n",
+    "    where_to_next: str\n",
     "\n",
     "class MasterState(TypedDict):\n",
     "    messages: Annotated[list[AnyMessage], add_messages]\n",
-    "    interrupted: bool = False\n",
+    "    chatting_agent_tool_state: ChattingAgentToolState\n",
+    "    interrupt_node_state: InterruptNodeState\n",
     "\n",
-    "tools = [agent_tkt_tool] \n",
+    "tools = [chatting_agent_tool] \n",
     "tool_name_to_executables = {tool.name: tool for tool in tools}\n",
     "llm_with_tools = llm.bind_tools(tools)\n",
     "\n",
@@ -172,20 +214,13 @@
     "        return \"tool_executor\"\n",
     "    else:\n",
     "        return END\n",
-    "\n",
-    "def tool_executor(state: MasterState):\n",
-    "    result = []\n",
-    "    for tc in state[\"messages\"][-1].tool_calls:\n",
-    "        _id, _name, _args = tc[\"id\"], tc[\"name\"], tc[\"args\"]\n",
-    "        _args.update(state)\n",
-    "        tool_response = tool_name_to_executables[_name].invoke(_args)\n",
-    "        result.append(ToolMessage(content=tool_response, tool_call_id=_id))\n",
-    "    state[\"messages\"].extend(result)\n",
-    "    return state\n",
+    "    \n",
+    "def interrupt_node(state: MasterState) -> MasterState:\n",
+    "    \n",
     "\n",
     "builder = StateGraph(MasterState)\n",
     "builder.add_node(\"llm_call\", llm_call)\n",
-    "builder.add_node(\"tool_executor\", tool_executor)\n",
+    "builder.add_node(\"tool_executor\", ToolNode(tools=[chatting_agent_tool]))\n",
     "builder.add_edge(START, \"llm_call\")\n",
     "builder.add_conditional_edges(\"llm_call\", check_tool_call, [\"tool_executor\", END])\n",
     "builder.add_edge(\"tool_executor\", \"llm_call\")\n",
@@ -215,7 +250,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.tools import tool, InjectedToolArg, InjectedToolCallId, ToolRuntime\n",
+    "from langgraph.prebuilt import ToolNode, InjectedState, tools_condition\n",
+    "from langgraph.graph import StateGraph, START, END, MessagesState\n",
+    "from langgraph.types import Command, interrupt\n",
+    "from langchain_core.messages import AIMessage, HumanMessage, ToolMessage, BaseMessage, SystemMessage\n",
+    "from typing import Annotated\n",
+    "from copy import deepcopy\n",
+    "from langgraph.runtime import get_runtime\n",
+    "\n",
+    "@tool\n",
+    "def test(query: str, x: Annotated[str, InjectedToolArg], tool_call_id: Annotated[str, InjectedToolCallId], runtime: ToolRuntime) -> int:\n",
+    "    \"\"\"Test\"\"\"\n",
+    "    print (runtime.state)\n",
+    "    return ToolMessage(\n",
+    "            content=\"\",\n",
+    "            artifact={\"query\": query, \"x\": x},\n",
+    "            tool_call_id = tool_call_id\n",
+    "        )\n",
+    "\n",
+    "\n",
+    "# AIMessage(content='', additional_kwargs={'tool_calls': [{'index': 0, 'id': 'call_JSw0YCATU7F215AaxyfNk0vq', 'function': {'arguments': '{\"a\": 2, \"b\": 3}', 'name': 'multiply'}, 'type': 'function'}, {'index': 1, 'id': 'call_AVz2aq3nH2CfS9ZvlvYxYeNB', 'function': {'arguments': '{\"a\": 6, \"b\": 10}', 'name': 'add'}, 'type': 'function'}]}, response_metadata={'finish_reason': 'tool_calls', 'model_name': 'gpt-4o-2024-11-20', 'system_fingerprint': 'fp_ee1d74bde0'}, id='run--bec3fe12-cdbf-4b6b-ba7b-457ff110f1d9-0', tool_calls=[{'name': 'multiply', 'args': {'a': 2, 'b': 3}, 'id': 'call_JSw0YCATU7F215AaxyfNk0vq', 'type': 'tool_call'}, {'name': 'add', 'args': {'a': 6, 'b': 10}, 'id': 'call_AVz2aq3nH2CfS9ZvlvYxYeNB', 'type': 'tool_call'}], usage_metadata={'input_tokens': 76, 'output_tokens': 51, 'total_tokens': 127, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}),\n",
+    "\n",
+    "tool_calls = [{'index': 0, 'id': 'call_JSw0YCATU7F215AaxyfNk0vq', 'function': {'arguments': '{\"query\": \"haha\", \"x\": \"he\"}',  'name': 'test'}, 'type': 'function'}]\n",
+    "graph = StateGraph(MessagesState).add_node(\"tool\", ToolNode(tools=[test])).add_edge(START, \"tool\").add_edge(\"tool\", END).compile()\n",
+    "ai_message = AIMessage(content='', additional_kwargs={'tool_calls': tool_calls})\n",
+    "\n",
+    "\n",
+    "graph.invoke({\"messages\": [ai_message]})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": []
