interrupt mechanism separate with intent classifier

--- a/notebooks/fake-agent-dev.ipynb
+++ b/notebooks/fake-agent-dev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2",
    "metadata": {},
    "outputs": [],
@@ -59,10 +59,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Hi, I am a ticketing agent. How can I help you?\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "Hello, I want to go to Bali. Can you help me book a flight?\n",
+      "in interrupt\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "calling a tool ...\n",
+      "Tool Calls:\n",
+      "  ask_for_help_tkt (tkt_1)\n",
+      " Call ID: tkt_1\n",
+      "  Args:\n",
+      "    question: From where, Human? Round-trip or one-way?\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "From Sydney, Australia. Round-trip. \n",
+      "in interrupt\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "calling a tool ...\n",
+      "Tool Calls:\n",
+      "  check_ticket_price (tkt_2)\n",
+      " Call ID: tkt_2\n",
+      "  Args:\n",
+      "    origin: Sydney\n",
+      "    destination: Bali\n",
+      "    round_trip: True\n",
+      "  ask_for_help_tkt (tkt_3)\n",
+      " Call ID: tkt_3\n",
+      "  Args:\n",
+      "    question: How many heads, Human?\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "Just one. How much would it be?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "It will be $1000.99, ok to proceed?\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "Yes, please book the flight.\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Great! Your flight from Sydney to Bali has been booked. Safe travels!\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "exit\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "Goodbye!\n"
+     ]
+    }
+   ],
    "source": [
     "example_conversation = \"\"\"\n",
     "A: Hi, I am a ticketing agent. How can I help you?\n",
